[BUG FIX] ajustes nos scripts em geral

--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -31,9 +31,9 @@
 		#   /usr/share/doc/apache2/README.Debian.gz for more info.
 		#   If both key and certificate are stored in the same file, only the
 		#   SSLCertificateFile directive is needed.
-		#Troque os {file.cert} e {file.key}}
-		SSLCertificateFile	/etc/ssl/certs/{file.cert}
-		SSLCertificateKeyFile /etc/ssl/private/{file.key}
+		#Troque o {APLICATION_NAME} pelo nome da sua aplicacao definida do DockerFile
+		SSLCertificateFile /etc/letsencrypt/live/{APLICATION_NAME}/fullchain.pem
+		SSLCertificateKeyFile /etc/letsencrypt/live/{APLICATION_NAME}/privkey.pem
 
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
